app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sangsokea-react-tailwindcss-deployment
  labels:
    app: sangsokea-react-tailwindcss
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sangsokea-react-tailwindcss
  template:
    metadata:
      labels:
        app: sangsokea-react-tailwindcss
    spec:
      containers:
        - name: sangsokea-react-tailwindcss
          image: kshrdautopilot/sangsokea-react-tailwindcss:2023-12-07-09-28-09
          ports:
            - containerPort: 3000
