app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sangsokea-react-tailwindcss-ingress
  namespace: sangsokea
spec:
  tls:
    - hosts:
        - react.auto-nang.site
      secretName: react-auto-nang-site-cert
  rules:
    - host: react.auto-nang.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sangsokea-react-tailwindcss-svc
                port:
                  number: 3000
